[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Instances/EntitesBase/Characters/CharacterEntity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Fonts/Actor-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/DialougHolder.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Instances/Actors/NPCs/ShopHolder.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Instances/EntitesBase/Characters/NPCBase.gd" type="Script" id=5]
[ext_resource path="res://Scenes/Instances/Actors/UI/RadialMenu.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 163.15, 122.502 )

[sub_resource type="DynamicFont" id=1]
size = 14
outline_size = 1
outline_color = Color( 0.109804, 0.109804, 0.109804, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[node name="NPCBase" instance=ExtResource( 1 )]
script = ExtResource( 5 )

[node name="Acknowledgement_area" type="Area2D" parent="." index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Acknowledgement_area" index="0"]
shape = SubResource( 3 )

[node name="Quick_Dia" type="RichTextLabel" parent="." index="5"]
margin_left = -168.0
margin_top = -67.0
margin_right = 169.0
margin_bottom = -16.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.211765, 1, 0.631373, 1 )
bbcode_enabled = true
bbcode_text = "[center]Quick Dialouge"
text = "Quick Dialouge"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Quick_Dia" index="1"]

[node name="NPCName" type="Label" parent="." index="6"]
margin_left = -68.0
margin_top = -45.2474
margin_right = 70.0
margin_bottom = -17.8474
custom_fonts/font = SubResource( 2 )
text = "NPC Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cooldowns" type="Node" parent="." index="7"]

[node name="QuickDiaCooldown" type="Timer" parent="Cooldowns" index="0"]
wait_time = 25.0
autostart = true

[node name="QuickDiaVisibiltyCooldown" type="Timer" parent="Cooldowns" index="1"]
wait_time = 5.0
one_shot = true
autostart = true

[node name="WanderCooldown" type="Timer" parent="Cooldowns" index="2"]
wait_time = 3.0
autostart = true

[node name="Holders" type="Node" parent="." index="8"]

[node name="ShopHolder" type="Node" parent="Holders" index="0" groups=[
"shop",
]]
script = ExtResource( 4 )

[node name="QuestHolder" type="Node" parent="Holders" index="1"]

[node name="DialougHolder" type="Node" parent="Holders" index="2"]
script = ExtResource( 3 )

[node name="RadialMenu" parent="." index="9" instance=ExtResource( 6 )]

[connection signal="input_event" from="." to="." method="_on_NPCBase_input_event"]
[connection signal="body_entered" from="Acknowledgement_area" to="." method="_on_Acknowledgement_area_body_entered"]
[connection signal="body_exited" from="Acknowledgement_area" to="." method="_on_Acknowledgement_area_body_exited"]
[connection signal="timeout" from="Cooldowns/QuickDiaCooldown" to="." method="_on_QuickDiaCooldown_timeout"]
[connection signal="timeout" from="Cooldowns/QuickDiaVisibiltyCooldown" to="." method="_on_QuickDiaVisibiltyCooldown_timeout"]
